--- a/08-ms-neurosciencebehavior.qmd
+++ b/08-ms-neurosciencebehavior.qmd
@@ -1,106 +1,164 @@
-# MS Neuroscience & Behavior
+# M.S. Neuroscience & Behavior
 
-## Program Description 
+## Program Description
 
+### Degree Overview
+
+The M.S. in Neuroscience & Behavior is offered exclusively through the **Accelerated B.S.–M.S. (AM)** pathway. Students complete integrated undergraduate and graduate training, culminating in an original master’s thesis.
+
+Students work with their advisor and Thesis Guidance Committee to develop and complete an independent research project. The degree is awarded upon completion of required coursework, successful thesis research and defense, and approval of the thesis by the committee and Graduate School.
+
+This program is designed to prepare students for:
+- Ph.D. programs in biomedical and biological sciences  
+- Health professional programs  
+- Immediate entry into the scientific workforce  
+
+Students are encouraged to present research at scientific conferences and publish in peer-reviewed journals.
+
+---
 
 ## Learning Outcomes
 
+- **Core Knowledge:** Demonstrate advanced understanding of neuroscience and behavior, with specialized expertise in a chosen focus area.  
+- **Critical Thinking:** Formulate and test hypotheses through rigorous experimental design, data analysis, and interpretation.  
+- **Research:** Conduct independent research including experimental design, data collection, analysis, and dissemination of results.  
+- **Communication:** Effectively communicate scientific findings through written, oral, and visual formats including publications and presentations.  
+- **Professionalism:** Develop leadership, teamwork, ethical, and interpersonal skills necessary for collaborative scientific careers.
+
+---
 
 ## Program Requirements and Timeline
 
 ### Credit Requirements
 
-The M.S. degree requires completion of a minimum of 30 credits, 6-¬10 of which are earned for thesis research (BIOL 899 Master's Thesis ). 
+This degree is available only through the **Accelerated Master’s (AM)** program. Students may apply up to **12 credits** of prior upper-level UNH coursework toward the M.S., consistent with AM policies. These credits may count toward both the B.S. and M.S. degrees but count as electives for the undergraduate major and do not replace core graduate requirements.
 
-There is no specific credit requirement for the Ph.D., though students must meet curriculum requirements.
+A minimum of **30 graduate credits** is required.
 
-Up to 8 graduate credits from another institution may be transferred, provided the credits were not counted toward another degree, and the course grade was a B or higher. Petitions requesting transfer credit must be supported by the advisor and graduate committee, and approved by the UNH Graduate School.
-Students admitted via the Accelerated Master's (AM) process may apply up to 12 credits of prior upper-level UNH coursework in accordance with AM policies.
+### Required Courses and Components
 
-The level of the courses taken to meet registration requirements is not specified. However, taking non-graduate classes does not move one towards degree completion, so taking undergraduate classes is not a common practice. A grad student cannot petition to take a 500-level course, however 500-level courses can be audited by graduate students with the cost of the course at the expense of the graduate student.
+**Responsible Conduct of Research**
+- Completion of Responsible Conduct of Research (RCR) training (credit/fail)
 
-Students should discuss with their advisor and committee which courses will be most useful, and what course load makes sense in light of specific research and assistantship obligations (for example, an intense field season). 
+**Scientific Communication**
+- BIOL 950 – Scientific Communication (2 credits)
 
-How many credits to take, and financial implications: 
+**Statistics**
+- Two semesters of advanced statistics  
+- At least one course must be at the 800–900 level  
 
-Graduate students are normally required to maintain continuous enrollment each Fall and Spring semester by registering for courses, research (Grad 900/BIOL 999), or continuing enrollment (Grad 800) (see below for distinctions). Students who don’t register for the Fall and Spring semesters will have their degree status discontinued.
+**Research Techniques (1 course)**
+Select one of the following:
+- NSB 903  
+- MCBS 901 – Introduction to Research in the Life Sciences  
+- Other approved research techniques course  
 
-Graduate students registered for 9 or more credits, Master's Continuing Research (Grad 900), or Doctoral Research (999) are classified as full-time students. Students holding assistantship appointments are also considered full time and must register for a minimum of 6 credits, or Master's Continuing Research (Grad 900). Students registered for Continuing Enrollment (GRAD 800) are not eligible to hold an appointment. For details, please see the Graduate School website (https://catalog.unh.edu/graduate/course- descriptions/grad).
+**Graduate Seminar**
+- Minimum of two semesters of graduate seminar  
+- NSB 997 – Neuroscience and Behavior Graduate Seminar  
+  (or equivalent approved seminar)
 
-Students on assistantships (TA or RA) pay reduced mandatory fees (fee information: https://www.unh.edu/business-services/tuitgrad); this benefit applies no matter how many credits you’re taking. Tuition is commonly waived or covered for students on TA or RA appointments; however, mandatory fees remain the responsibility of the student. Students on assistantship in the spring semester can have tuition waived for summer courses offered by the Graduate School (GRAD prefix).
+**Teaching Preparation**
+- Required for all teaching assistants:  
+  - GRAD 950 – Issues in College Teaching  
 
-Students enrolled for more than 16 credits pay additional tuition based on the number of additional credits (https://www.unh.edu/business-services/tuitgrad). 
+**Electives**
+- Selected with advisor and committee based on specialization and career goals  
 
-Tuition and fee information from UNH Business Services is available at https://www.unh.edu/business-services/tuitgrad; Graduate School information about fees and financial support is at  https://catalog.unh.edu/graduate/general-information/fees-financial-support/ .
+**Master’s Thesis**
+- NSB 899 – Neuroscience and Behavior Master’s Thesis  
 
-Which courses count:
+---
 
-Graduate courses are numbered 800- or 900-level. Course descriptions can be found in the online Graduate Course Catalog (https://catalog.unh.edu/graduate/). If there is a graded option, graduate courses may not be taken Pass/Fail.
+## Research Proposal and Committee
 
-Graduate credit for 700-level courses: 700-level courses are advanced undergraduate courses. In rare cases graduate degree students may petition to earn graduate credit for up to 12 credits in 700-­level courses, provided the credits are taken in a program other than the one in which the student is seeking the degree and provided such courses are approved by the student's adviser, graduate program coordinator, and the dean of the Graduate School. Such courses must be taken for a letter grade. Petitions must include what additional requirements or expectations will be required of the student to make the course a graduate level experience.  Petition requests must be made prior to enrolling in the course and are not guaranteed.  Petition forms are available at https://gradschool.unh.edu/academics/forms-policies.
+### Thesis Guidance Committee
 
-Undergraduate courses below 700-level: While taking non-graduate classes is generally discouraged, in some cases, graduate students may need background or training that can best be obtained by taking an upper-level undergraduate class, if no equivalent course is offered at the graduate level. Undergraduate level courses taken by graduate students are billed at the graduate rate, must be taken for a letter grade, and are subject to the Graduate School’s failing grade policy. Courses taken below the 700-level cannot count as graduate credit.
+Students establish a Thesis Guidance Committee during the senior year or first semester of the graduate year. The committee typically includes:
 
-Audits: Graduate students may audit courses with the approval of their advisor and the instructor. Credits for an audited course in which a graduate student is formally enrolled may be counted toward enrollment requirements for appointments and assistantships. (Note that tuition for audited courses is the same as for credit courses.)
+- The advisor (chair)  
+- At least three additional faculty members  
+- Representation from at least two departments (e.g., Biological Sciences, MCBS, Psychology, Communication Sciences & Disorders)
 
-Graduate credit from another institution: Students can request to transfer up to 8 credits of graduate credit from another school, provided the credits were not counted toward another degree, and the grade was at least a B. The transfer request form is available at (https://gradschool.unh.edu/academics/forms-policies). 
+Committee members, aside from the advisor, should not be directly involved in the student’s proposed research. Students must submit the Thesis Guidance Committee Nomination Form to the Graduate School.
 
-Where to find enrollment policy, course and registration information:
-• Graduate School enrollment policies and petition forms: https://gradschool.unh.edu/academics/forms-policies
-• the UNH Course Search Form searches all courses (grad and undergrad) (https://courses.unh.edu/)https://courses.unh.edu/
-• descriptions of graduate courses are in the online catalog https://catalog.unh.edu/graduate/
-• registration information and deadlines are posted at the Graduate School website https://gradschool.unh.edu/graduate-student-resources 
-
+The committee evaluates the feasibility, originality, and rigor of the research plan and approves coursework and research timelines.
 
 ### Research Proposal
-M.S. students must have their proposal approved by their advisor and Thesis Committee by the end of the second semester. 
 
-### Annual Progress Report and Review Meeting
-Each student will meet with a representative of the Graduate Program Committee in the spring semester to review progress and identify any concerns. The purpose of this meeting is to:
+The written proposal is typically modeled after an **NIH NRSA F31** fellowship format (or NSF/other agency format when appropriate). The proposal should describe a feasible research project using available resources and collaborations.
 
-1) Encourage the student to think critically about his/her own progress (or lack thereof) and goals for both the immediate and long-term future.
+Typical proposal components:
 
-2) Increase a sense of accountability on behalf of graduate students, and motivate students moving at a slow pace to increase their productivity and involvement in the program.
+**Specific Aims**
+- One-page overview  
+- Research gap and objectives  
+- Two testable hypotheses  
+- Potential impact  
 
-3) Remind students that to be a truly successful graduate student, one should (ideally) demonstrate success in multiple areas (research, funding, teaching, service), and provide examples for how to do that.
+**Research Strategy**
+- **Background and Significance:** Context and importance of the research  
+- **Innovation:** Conceptual or technical novelty  
+- **Approach:** Methods, resources, anticipated challenges, and alternatives  
+- **Timeline:** Major milestones and anticipated completion schedule  
 
-4) Provide a clear paper trail in case situations arise in which there is confusion or disagreement about a student's progress.
+The proposal is submitted during the first semester of the graduate year. Committee members may approve or request revisions. Once a majority approves the written proposal, the student proceeds with research.
 
-The annual meeting also provides an opportunity for students to raise any concerns, and provide feedback about the program and their graduate experience.
+---
 
-In preparation for progress review meetings, 
-• The student writes a report about their progress, and submits it to their advisor and committee for review and comments. This should occur in the first half of the spring semester. Instructions and template for the student report are available at the program website, or from the department. 
-• The advisor reviews and signs the student’s report, and then also fills out an evaluation describing his/her view of the student's progress, and including a summary of the most recent committee meeting – which should take place earlier in the same semester. Instructions and template for the advisor report are available at the program website, or from the department. Reports must be submitted at least one week before scheduled meetings, normally by mid-April.
-• Instructors for whom the student has served as a teaching assistant provide comments on their teaching. (If instructors have previously provided feedback as part of fellowship or other applications, they needn’t do so again.) Comments must be submitted at least one week before scheduled meetings, normally by mid-April.
+## Thesis and Defense Timeline
 
-All reports and comments will be submitted to the designated departmental staff person, who will schedule a review meeting for each student with a member of the GPC (not including the advisor or, preferably, other members of the student’s committee), normally between mid-April and mid-May. 
+Students meet with the Guidance Committee early in the graduate year to finalize thesis scope and timeline.
 
-Following the meetings, comments and suggestions will be shared with the student and advisor, as well as the Program Coordinator. If there is material in the comments that is confidential or should not be shared, it may be withheld at the discretion of the Program Coordinator.
+- Proposal approval: first semester of graduate year  
+- Proposal defense (if required): typically Year 4 of combined program  
+- Thesis defense: typically Year 5 of combined program  
 
-Students who do not complete the review process by the specified date will have a hold placed on their registration by the Graduate School until they have resolved the situation.
+The committee must determine readiness prior to scheduling the defense. The final thesis must be judged of publishable quality by the committee.
 
-### Completing the Degree
+Students must meet all Graduate School requirements for thesis formatting, submission, and deadlines.
 
-As a graduate student, you are responsible for knowing what you need to do to get your degree: your advisor and committee should offer guidance, but the primary responsibility is yours. Make sure you are thoroughly familiar with:
+---
 
-• the program’s academic requirements (credits, courses, competencies);
-• necessary paperwork (committee nomination, Ph.D. candidacy, etc.);
-• thesis/dissertation format and filing requirements (set by the Graduate School);
-• format and scheduling procedures for qualifying exams and thesis/dissertation defense; and all relevant deadlines.
+## Annual Progress Review
 
-If you have questions about what you need to do, or how to do it, consult your advisor, the Program Coordinator, and/or the UNH Graduate School. If there is information you think needs to be added or clarified in this handbook, please tell the Program Coordinator.
+Each spring, students participate in an annual progress review with a representative of the Graduate Program Committee.
 
-For both the MS thesis and Ph.D. dissertation students are required to give a public, advertised seminar on the UNH campus, followed by a private examination by the student's committee, which may require revisions. The committee is responsible for assessing and approving the final version of the thesis. The committee should be provided with a complete copy of the thesis for review at least two full weeks before the defense.
+**Goals of the review:**
+- Encourage reflection on progress and goals  
+- Support timely degree completion  
+- Provide mentorship and feedback  
+- Maintain clear documentation of progress  
 
-The student is responsible for transmitting necessary paperwork to the Graduate School, and fulfilling Graduate School requirements for electronic submission of the thesis, by the appropriate deadline.
+**Preparation includes:**
+- Student progress report submitted to advisor and committee  
+- Advisor evaluation and summary of committee meeting  
+- Teaching feedback (if applicable)
+
+All materials are submitted to the designated departmental staff member, who schedules review meetings (typically mid-April through mid-May). Failure to complete required materials may result in a registration hold.
+
+---
+
+## Completing the Degree
+
+Students are responsible for understanding all program and Graduate School requirements, including:
+
+- Coursework and credit requirements  
+- Committee formation and required paperwork  
+- Thesis formatting and submission requirements  
+- Defense scheduling procedures and deadlines  
+
+A public seminar and thesis defense are required. The thesis must be provided to the committee at least **two weeks** before the defense.
+
+Final thesis submission must meet Graduate School deadlines and formatting requirements.
+
+---
+
+## Graduation
+
+The Graduate School provides detailed procedures and deadlines for graduation, including intent-to-graduate forms, thesis submission, and Commencement:  
+http://www.gradschool.unh.edu/graduation.php
 
 
-### Graduation
-
-The Graduate School website provides detailed information on graduation procedures, including deadlines, filing “intent to graduate” notification, submitting theses/dissertations to the Graduate School, and Commencement: http://www.gradschool.unh.edu/graduation.php
 
 
-### Student Rights and Key Policies
-
-UNH’s statement on Student Rights, Rules, and Responsibilities applies to graduate students as well as to undergraduates. It can be found at https://catalog.unh.edu/srrr/ 
-See Graduate School Catalog for general information, policies, and student rights: https://catalog.unh.edu/graduate/
